- removed deprecated EL method override - fallback to a default ContextService in ManagedScheduledExecutorServiceImpl - removed unused var in CUTask - removed not-existing jetty dependency